Update pom.xml and related packages; add load json file function

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </dependencies>
  
     <build>
-        <sourceDirectory>MVC/src/main</sourceDirectory>
+        <sourceDirectory>src/main</sourceDirectory>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
